--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-json-excel": "^0.3.0",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
